# qvt-back

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/api/: app.py  visualize.py
src/config/: observability.py  settings.py
src/schemas/: datasets.py  errors.py  visualize.py
src/services/: data_loader.py  error_builder.py  qvt_metrics.py  survey_utils.py  validators.py  visualize_service.py
src/viz/: __init__.py  base.py  registry.py  theme.py
src/viz/strategies/: action_priority_index.py  anova_significance.py  benchmark_bullet.py  clustering_profile.py  correlation_matrix.py  demographic_distribution.py  dimension_boxplot.py  dimension_ci_bars.py  dimension_heatmap.py  dimension_mean_std_scatter.py  dimension_summary.py  distribution_anomalies.py  eng_epui_quadrants.py  example_new_chart.py  importance_performance_matrix.py  leverage_scatter.py  likert_distribution.py  likert_item_heatmap.py  predictive_simulation.py  scatter_regression.py  time_series.py  time_series_ci.py
tests/: conftest.py
tests/contract/: test_registry_keys.py  test_visualize_contract.py
tests/fixtures/: hr_valid.csv  pov_sample.csv  survey_valid.csv
tests/integration/: test_new_chart_key.py  test_scatter_regression_fix.py  test_validation_errors.py  test_visualize_api.py  test_visualize_axis_layout.py  test_visualize_comparison.py
tests/performance/: test_visualize_perf.py
tests/unit/: test_chart_axis_layout.py  test_data_loader.py  test_error_models.py  test_likert_distribution.py  test_validators.py
